# pachka-bot

./: .env.example  .gitignore  Dockerfile  README.md  deep-research-report.md  docker-compose.yml  pyproject.toml  Архитектурное+ревью+сервис+для+_PMO_ (1).doc  Требования-пачка-трекер-бот.md
Docs/: developer-guide.md  user-guide.md
app/: config.py  main.py
app/api/: health.py  webhook.py
app/commands/: router.py
app/pachca/: client.py
app/report/: aggregator.py  builder.py
app/status/: mapping.py  parser.py
app/tracker/: client.py  models.py
docs/: architecture-review-current-implementation.md  implementation-plan.md  refactoring-analysis.md
scripts/: dump_comments.py  dump_portfolios.py  dump_statuses.py
tests/: test_aggregator.py  test_command_router.py  test_pachca_client.py  test_report_builder.py  test_status_mapping.py  test_status_parser.py  test_tracker_client.py
